--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
-<title>Under Construction</title>
+<title>Akazure Project io</title>
 </head>
 <body>
-<h1>Under Construction</h1>
+<h1>More on <a href="https://akazure.com">akazure.com</a></h1>
+<h3><a href="./ics46-2020-grade-calc.html">ICS 46 2020FALL Grade Calculator</a></h3>
 </body>
