--- a/index.html
+++ b/index.html
@@ -94,9 +94,11 @@ EMAIL: yuxuz23@uci.edu
     <p class="author-info">By Yuxuan Zhang | <a href="mailto:yuxuz23@uci.edu">yuxuz23@uci.edu</a> | <a href="https://akazure.com">akazure.com</a></p>
   </footer>
   <aside>
-    <div id="left-show-navi" onclick="ShowSidebar()" class="animate__animated animate__slideInLeft"><i class="fas fa-bars"></i></div>
+    <div id="left-show-navi" onclick="ShowSidebar()" class="animate__animated animate__slideInLeft">
+      <span class="fas fa-bars"></span>
+    </div>
     <nav id="left-navi">
-      <div id="left-hide-navi" onclick="HideSidebar()"><i class="fas fa-arrow-left"></i></div>
+      <div id="left-hide-navi" onclick="HideSidebar()"><span class="fas fa-arrow-left"></span></div>
       <table>
         <tbody>
           <tr>
@@ -110,7 +112,7 @@ EMAIL: yuxuz23@uci.edu
             </td>
           </tr>
           <tr>
-            <td  id="sidebar-internship">
+            <td id="sidebar-internship">
               <a href="internship.html">INTERNSHIP</a>
             </td>
           </tr>
@@ -134,7 +136,7 @@ EMAIL: yuxuz23@uci.edu
     </nav>
   </aside>
   <aside>
-    <div id="back-to-top" onclick="backToTop()"><i class="fas fa-arrow-up"></i></div>
+    <div id="back-to-top" onclick="backToTop()"><span class="fas fa-arrow-up"></span></div>
   </aside>
 </body>
 
