--- a/interest.html
+++ b/interest.html
@@ -86,10 +86,11 @@ EMAIL: yuxuz23@uci.edu
                 href="https://akazure.com">akazure.com</a></p>
     </footer>
     <aside>
-        <div id="left-show-navi" onclick="ShowSidebar()" class="animate__animated animate__slideInLeft"><i
-                class="fas fa-bars"></i></div>
+        <div id="left-show-navi" onclick="ShowSidebar()" class="animate__animated animate__slideInLeft">
+            <span class="fas fa-bars"></span>
+        </div>
         <nav id="left-navi">
-            <div id="left-hide-navi" onclick="HideSidebar()"><i class="fas fa-arrow-left"></i></div>
+            <div id="left-hide-navi" onclick="HideSidebar()"><span class="fas fa-arrow-left"></span></div>
             <table>
                 <tbody>
                     <tr>
@@ -127,7 +128,7 @@ EMAIL: yuxuz23@uci.edu
         </nav>
     </aside>
     <aside>
-        <div id="back-to-top" onclick="backToTop()"><i class="fas fa-arrow-up"></i></div>
+        <div id="back-to-top" onclick="backToTop()"><span class="fas fa-arrow-up"></span></div>
     </aside>
 </body>
 
