--- a/internship.html
+++ b/internship.html
@@ -72,8 +72,8 @@ EMAIL: yuxuz23@uci.edu
         <div id="content-window" class="animate__animated animate__fadeInRight" role="doc-abstract">
             <div id="summer-intern-2021">
                 <div class="edu-info">
-                    <p><strong>Unity Game Developer in Migu, China Mobile Limited</strong></p>
-                    <p><i>Internship</i></p>
+                    <h2>Unity Game Developer in Migu, China Mobile Limited</h2>
+                    <p><em>Internship</em></p>
                     <ul>
                         <li>Developed the mobile game with Unity, NGUI, ILRuntime, and Git</li>
                         <li>Familiarized with and practiced the MVC(Model, View, Controller) Pattern</li>
