--- a/project.html
+++ b/project.html
@@ -39,7 +39,7 @@ EMAIL: yuxuz23@uci.edu
 <body>
     <div id="top" class="non-select animate__animated animate__fadeInDown">
         <h1>
-            <strong>Welcome<br>This is Yuxuan's Portfolio</strong>
+            <strong>Project<br>What did you learn in school today?</strong>
         </h1>
     </div>
     <div id="main-content" class="fullwidth">
@@ -71,16 +71,16 @@ EMAIL: yuxuz23@uci.edu
         </nav>
         <div id="content-window" class="animate__animated animate__fadeInRight" role="doc-abstract">
             <div id="wordpress">
-                <h5>Wordpress Theme and Plugin Development</h5>
-                <p><i>Personal Website</i></p>
+                <h2>Wordpress Theme and Plugin Development</h2>
+                <p><em>Personal Website</em></p>
                 <ul>
                     <li>Developed Wordpress plugins supporting Markdown+Katex</li>
                     <li>Designed 2 Wordpress themes with Vue, React, and PHP; familiarized with full-stack development</li>
                 </ul>
             </div>
             <div id="Minesweeper-AI">
-                <h5>Minesweeper AI Project</h5>
-                <p><i>Group Leader</i></p>
+                <h2>Minesweeper AI Project</h2>
+                <p><em>Group Leader</em></p>
                 <ul>
                     <li>Programmed an AI Agent for Minesweeper with Machine Learning algorithms and won the TOP 10 in
                         competition</li>
@@ -88,8 +88,8 @@ EMAIL: yuxuz23@uci.edu
                 </ul>
             </div>
             <div id="North-America-1700">
-                <h5>North America 1700</h5>
-                <P><i>Group Leader</i></P>
+                <h2>North America 1700</h2>
+                <P><em>Group Leader</em></P>
                 <ul>
                     <li>Designed and developed a strategy game through Python GUI and other standard libraries</li>
                     <li>Designed protocols and web sockets for Player vs. Player mode</li>
