--- a/skill.html
+++ b/skill.html
@@ -71,7 +71,7 @@ EMAIL: yuxuz23@uci.edu
         </nav>
         <div id="content-window" class="animate__animated animate__fadeInRight" role="doc-abstract">
             <div id="tech-stacks">
-                <p><strong>Tech Stacks</strong></p>
+                <h2>Tech Stacks</h2>
                 <ul>
                     <li>Programming Languages:<br>
                         Python, C, C++, C#, JavaScript, HTML&CSS, Java, PHP, MySQL, Shell
@@ -85,7 +85,7 @@ EMAIL: yuxuz23@uci.edu
                 </ul>
             </div>
             <div id="language">
-                <p><strong>Languages</strong></p>
+                <h2>Languages</h2>
                 <ul>
                     <li>Chinese / Mandarin : Native Speaker</li>
                     <li>English : Fluent </li>
